Completed eda and transform notebooks (with some answers in model_train.ipynb

--- a/notebooks/model_train.ipynb
+++ b/notebooks/model_train.ipynb
@@ -22,7 +22,7 @@
     "## Questions\n",
     "Is this a classification or regression task?  \n",
     "\n",
-    "Answer here"
+    "ANS: Classification."
    ]
   },
   {
@@ -32,7 +32,7 @@
    "source": [
     "Are you predicting for multiple classes or binary classes?  \n",
     "\n",
-    "Answer here"
+    "ANS: Binary classes."
    ]
   },
   {
@@ -42,7 +42,7 @@
    "source": [
     "Given these observations, which 2 (or possibly 3) machine learning models will you choose?  \n",
     "\n",
-    "List your models here"
+    "ANS: K-Nearest Neighbors, Support Vector Machines, and (maybe) Random Forests."
    ]
   },
   {
@@ -69,6 +69,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1b0c646a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9753e813",
    "metadata": {},
    "outputs": [],
    "source": []
